# school_management

./: .flake8  Makefile  env.txt  pyproject.toml  readme.rst  requirements.txt
helper/: generate_token.py  utility.py
project/: settings.py  urls.py
student/: admin.py  apps.py  models.py  signals.py
student/api/: serializers.py  urls.py  views.py
student/management/commands/: seed_admin.py
student/migrations/: 0001_initial.py
